--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+test.ipynb
 data/
 experiment-result/
 *.ckpt
@@ -142,7 +143,6 @@ fabric.properties
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
