--- a/Pipfile
+++ b/Pipfile
@@ -6,26 +6,17 @@ name = "pypi"
 [packages]
 torch = "*"
 torchaudio = "*"
+pytorch-lightning = "*"
+auraloss = "*"
+opt-einsum = "*"
 einops = "*"
-ipython = "*"
 notebook = "*"
-tqdm = "*"
-rootconfig = "*"
 numpy = "*"
 scipy = "*"
-opt-einsum = "*"
 pandas = "*"
-auraloss = "*"
-wandb = "*"
-jupyter = "*"
-ipywidgets = "*"
-torchvision = "*"
-pyloudnorm = "*"
-torchinfo = "*"
 matplotlib = "*"
-soundfile = "*"
-plotly = "*"
-pytorch-lightning = "*"
+pyloudnorm = "*"
+jsonargparse = {version = "*", extras = ["signatures"]}
 
 [dev-packages]
 autopep8 = "*"
